--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit
-tensorflow
-numpy
-Pillow
-opencv-python
-matplotlib
+streamlit==1.28.0
+tensorflow==2.13.0
+numpy==1.26.0
+Pillow==10.0.0
+opencv-python-headless==4.8.1.78
+matplotlib==3.8.1
+transformers==4.35.0
+torch==2.2.0
 imghdr
-streamlit
-transformers
-torch
