--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-streamlit==1.28.0
-tensorflow==2.13.0
-numpy==1.26.0
-Pillow==10.0.0
+streamlit==1.26.0
+matplotlib==3.8.0
+Pillow==10.1.0
+tensorflow-cpu==2.13.0
+torch==2.1.0+cpu
+torchvision==0.16.1+cpu
+torchaudio==2.1.1+cpu
+transformers==4.43.0
 opencv-python-headless==4.8.1.78
-matplotlib==3.8.1
-transformers==4.35.0
-torch==2.2.0
+numpy==1.26.0
 imghdr
