--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-streamlit==1.26.0
-matplotlib==3.8.0
-Pillow==10.1.0
-tensorflow-cpu==2.13.0
-torch==2.1.0+cpu
-torchvision==0.16.1+cpu
-torchaudio==2.1.1+cpu
-transformers==4.43.0
-opencv-python-headless==4.8.1.78
-numpy==1.26.0
+streamlit
+tensorflow
+numpy
+Pillow
+opencv-python
+matplotlib
 imghdr
+streamlit
+transformers
+torch
